// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> should call onChange callback 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[MockFunction]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <span
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
            >
              <Translate
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={Object {}}
                role={null}
                string="foo"
                transform={null}
              >
                <span
                  className={null}
                  role={null}
                >
                  foo
                </span>
              </Translate>
            </span>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should have on value at a time 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <span
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
            >
              <Translate
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={Object {}}
                role={null}
                string="foo"
                transform={null}
              >
                <span
                  className={null}
                  role={null}
                >
                  foo
                </span>
              </Translate>
            </span>
          </label>
        </RadioItem>
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_bar/.1"
          label="bar"
          name="bar"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 bar radioItem"
            htmlFor="bar"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              aria-labelledby="bar-label"
              checked={false}
              className="sr-only input"
              id="bar"
              name="bar"
              onChange={[Function]}
              type="radio"
            />
            <span
              aria-hidden={true}
              className="css-1hju4sd label"
              id="bar-label"
            >
              <Translate
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={Object {}}
                role={null}
                string="bar"
                transform={null}
              >
                <span
                  className={null}
                  role={null}
                >
                  bar
                </span>
              </Translate>
            </span>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render column group with items 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <span
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
            >
              <Translate
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={Object {}}
                role={null}
                string="foo"
                transform={null}
              >
                <span
                  className={null}
                  role={null}
                >
                  foo
                </span>
              </Translate>
            </span>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render empty group 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      />
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should render rows group with items 1`] = `
<RadioGroup
  className=""
  direction="rows"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value={null}
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1gehsfr radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={false}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <RadioUnchecked
              className="css-pljilv uncheckedIcon"
            >
              <Icon
                className="css-pljilv uncheckedIcon"
                color={null}
                content="<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-pljilv uncheckedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioUnchecked>
            <input
              aria-labelledby="foo-label"
              checked={false}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <span
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
            >
              <Translate
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={Object {}}
                role={null}
                string="foo"
                transform={null}
              >
                <span
                  className={null}
                  role={null}
                >
                  foo
                </span>
              </Translate>
            </span>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;

exports[`<RadioGroup /> should use default value 1`] = `
<RadioGroup
  className=""
  direction="column"
  disabled={false}
  errorText=""
  isControlled={false}
  label=""
  name="radio"
  onChange={[Function]}
  showErrorText={true}
  translateErrorText={true}
  value="foo"
>
  <FormElement
    className="radioGroup ui-shared__form__radio-group"
    disabled={false}
    errorText=""
    hasPlaceholder={true}
    hasUnderline={false}
    hasValue={true}
    htmlFor="none"
    isFocused={false}
    label=""
    labelStatic={true}
    placeholder=""
    showErrorText={true}
    translateErrorText={true}
  >
    <div
      className="css-1vjh8yv radioGroup ui-shared__form__radio-group formElement ui-shared__form-element"
    >
      <div
        className="css-1t62idy radioGroup"
      >
        <RadioItem
          attributes={null}
          checked={true}
          className=""
          key="radio_foo/.0"
          label="foo"
          name="foo"
          onChange={[Function]}
        >
          <label
            className="css-15broj4 foo radioItem"
            htmlFor="foo"
          >
            <RadioChecked
              className="css-nihp8 css-pljilv checkedIcon"
            >
              <Icon
                className="css-nihp8 css-pljilv checkedIcon"
                color={null}
                content="<path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>"
                size="inherit"
                viewBox="0 0 24 24"
              >
                <svg
                  className="css-yys9hb css-nihp8 css-pljilv checkedIcon common__icon"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<path d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"/>",
                    }
                  }
                  style={
                    Object {
                      "fill": null,
                      "fontSize": "inherit",
                    }
                  }
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </Icon>
            </RadioChecked>
            <input
              aria-labelledby="foo-label"
              checked={true}
              className="sr-only input"
              id="foo"
              name="foo"
              onChange={[Function]}
              type="radio"
            />
            <span
              aria-hidden={true}
              className="css-1hju4sd label"
              id="foo-label"
            >
              <Translate
                acceptPlainTextWithPlaceholders={false}
                className={null}
                params={Object {}}
                role={null}
                string="foo"
                transform={null}
              >
                <span
                  className={null}
                  role={null}
                >
                  foo
                </span>
              </Translate>
            </span>
          </label>
        </RadioItem>
      </div>
    </div>
  </FormElement>
</RadioGroup>
`;
